# media-endpoint

./: .gitignore  CMakeLists.txt  Makefile  README.md  custom.mk  test_pj_stream  test_pj_stream.c
include/: .endpoint.h.swp  endpoint.h  endpoint1.h
src/: .endpoint.c.swp  endpoint.c  endpoint1.c
test/: app-receiver.c  app-streamer-2.c  app-streamer.c  confbridge.c  list-devices.c  test-receiver.c  test-streamer.c
